# RustShell

./: Cargo.toml  README.md
src/: completion.rs  main.rs  piping.rs  prompt.rs
